<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pull_request"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#3977b5"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/txtBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_pull_request"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="@id/txtTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="2"
            android:ellipsize="end"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@android:color/black" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtBody"
            app:layout_constraintStart_toStartOf="@id/txtTitle"
            />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            style="@style/username"
            tools:text="@string/username"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"

            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15/04/2020"
            style="@style/date"
            app:layout_constraintTop_toTopOf="@+id/username"
            app:layout_constraintBottom_toBottomOf="@id/username"
            app:layout_constraintEnd_toEndOf="parent" />


        <View
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/txtBody"
            app:layout_constraintTop_toBottomOf="@id/avatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>